trying to fix overflow issue in body

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
+    overflow-y: hidden;
     width: 100vw;
     color: #777;
     padding: 30px;
